# fastapi-login-react

backend/: README.md  main.py  pyproject.toml
backend/dashboard/v1/: routes.py
backend/login/v1/: database.py  models.py  routes.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 7a5cc6c96146_create_users_table.py
backend/tests/: conftest.py  test_app.py  test_db.py
